# rust-science

./: .gitignore  README.md
critical_cell/: .gitignore  README.md  visualise.py
critical_cell/2d/: Makefile  grid_module.f90  main.f90  visualise.py
critical_cell/3d/: Makefile  grid_module.f90  main.f90  visualise.py
nBodySolver/: Project.toml
nBodySolver/src/: nBodySolver.jl
seismic-wave-modeller/: Cargo.toml  README.md  example_config.toml  minimal_config.toml  to_mp4.sh  visualiser.py
seismic-wave-modeller/src/: config.rs  grid.rs  hdf5_writer.rs  main.rs  materials.rs  simulation.rs  visualisation.rs  wavefield.rs
