[package]
name = "seismic-wave-modeller"
edition = "2021"
[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colorgrad = { version = "0.8.0", features = ["preset"] }
ndarray = { version = "0.17.1", features = ["rayon"] }
plotters = "0.3.7"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
